--- a/Project/RVMDK(uv5)/iSO-STM32.uvprojx
+++ b/Project/RVMDK(uv5)/iSO-STM32.uvprojx
@@ -366,7 +366,7 @@
               <MiscControls></MiscControls>
               <Define>STM32F10X_HD, USE_STDPERIPH_DRIVER</Define>
               <Undefine></Undefine>
-              <IncludePath>..\..\Libraries\CMSIS;..\..\User;..\..\Libraries\FWlib\inc;..\..\User\gpio;..\..\User\SysTick;..\..\User\usart;..\..\User\DMA;..\..\User\contiki-code\cpu\arm\stm32f103;..\..\User\contiki-code\platform\stm32test;..\..\User\contiki-code\core;..\..\User\contiki-code\core\sys;..\..\User\IWDG;..\..\User\SPI;..\..\Hardware\DHT11;..\..\Hardware\OLED;..\..\Libraries\sys;..\..\User\delay;..\..\User\ADC;..\..\Hardware\MQ_2;..\..\Hardware\HC-SR501;..\..\Hardware\HC-SR04;..\..\User\TIMER;..\..\User\EXTI;..\..\User\TIMER\TIM4-capture;..\..\User\I2C;..\..\Hardware\BH1750;..\..\User\NVIC;..\..\User\Contiki-ProcessTask;..\..\Hardware\RC522;..\..\Libraries\cJSON;..\..\Libraries\Malloc;..\..\User\CommunicationProtocol;..\..\User\FIFO;..\..\Hardware\E30TTL100;..\..\Hardware\SDS01;..\..\Hardware\SHT15;..\..\Hardware\T6603;..\..\Hardware\W5500;..\..\User\STM_FLASH;..\..\Hardware\ESP8266;..\..\Hardware\Beep;..\..\User\PWM;..\..\Hardware\MQ_135</IncludePath>
+              <IncludePath>..\..\Libraries\CMSIS;..\..\User;..\..\Libraries\FWlib\inc;..\..\User\gpio;..\..\User\SysTick;..\..\User\usart;..\..\User\DMA;..\..\User\contiki-code\cpu\arm\stm32f103;..\..\User\contiki-code\platform\stm32test;..\..\User\contiki-code\core;..\..\User\contiki-code\core\sys;..\..\User\IWDG;..\..\User\SPI;..\..\Hardware\DHT11;..\..\Hardware\OLED;..\..\Libraries\sys;..\..\User\delay;..\..\User\ADC;..\..\Hardware\MQ_2;..\..\Hardware\HC-SR501;..\..\Hardware\HC-SR04;..\..\User\TIMER;..\..\User\EXTI;..\..\User\TIMER\TIM4-capture;..\..\User\I2C;..\..\Hardware\BH1750;..\..\User\NVIC;..\..\User\Contiki-ProcessTask;..\..\Hardware\RC522;..\..\Libraries\cJSON;..\..\Libraries\Malloc;..\..\User\CommunicationProtocol;..\..\User\FIFO;..\..\Hardware\E30TTL100;..\..\Hardware\SDS01;..\..\Hardware\SHT15;..\..\Hardware\T6603;..\..\Hardware\W5500;..\..\User\STM_FLASH;..\..\Hardware\ESP8266;..\..\Hardware\Beep;..\..\User\PWM;..\..\Hardware\MQ_135;..\..\Hardware\LCD</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -695,11 +695,6 @@
               <FilePath>..\..\Hardware\MQ_2\MQ-2_GPIO.txt</FilePath>
             </File>
             <File>
-              <FileName>readme.txt</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\..\Documents\readme.txt</FilePath>
-            </File>
-            <File>
               <FileName>OLED_GPIO.txt</FileName>
               <FileType>5</FileType>
               <FilePath>..\..\Hardware\OLED\OLED_GPIO.txt</FilePath>
@@ -764,11 +759,6 @@
         <Group>
           <GroupName>Hardware</GroupName>
           <Files>
-            <File>
-              <FileName>oled.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\Hardware\OLED\oled.c</FilePath>
-            </File>
             <File>
               <FileName>dht11.c</FileName>
               <FileType>1</FileType>
@@ -848,6 +838,11 @@
               <FileName>MQ-135.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\Hardware\MQ_135\MQ-135.c</FilePath>
+            </File>
+            <File>
+              <FileName>ILI93xx.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\Hardware\LCD\ILI93xx.c</FilePath>
             </File>
           </Files>
         </Group>
