--- a/Project/RVMDK(uv5)/iSO-STM32.uvprojx
+++ b/Project/RVMDK(uv5)/iSO-STM32.uvprojx
@@ -148,7 +148,7 @@
             <RestoreSysVw>1</RestoreSysVw>
           </Target>
           <RunDebugAfterBuild>0</RunDebugAfterBuild>
-          <TargetSelection>6</TargetSelection>
+          <TargetSelection>11</TargetSelection>
           <SimDlls>
             <CpuDll></CpuDll>
             <CpuDllArguments></CpuDllArguments>
@@ -162,7 +162,7 @@
             <PeripheralDll></PeripheralDll>
             <PeripheralDllArguments></PeripheralDllArguments>
             <InitializationFile></InitializationFile>
-            <Driver>Segger\JL2CM3.dll</Driver>
+            <Driver>STLink\ST-LINKIII-KEIL_SWO.dll</Driver>
           </TargetDlls>
         </DebugOption>
         <Utilities>
@@ -693,11 +693,6 @@
               <FileName>MQ-2_GPIO.txt</FileName>
               <FileType>5</FileType>
               <FilePath>..\..\Hardware\MQ_2\MQ-2_GPIO.txt</FilePath>
-            </File>
-            <File>
-              <FileName>readme.txt</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\..\Documents\readme.txt</FilePath>
             </File>
             <File>
               <FileName>OLED_GPIO.txt</FileName>
